test/expected/large/datasources/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: dmdataservices
    foo.com/duversion: 3.9.75-20190924.1569376667733
    foo.com/version: 3.9.75
  labels:
    app.kubernetes.io/name: dmdataservices
    helm.sh/chart: dmdataservices-3.9.75
  name: datasources
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /dataSources
    - uri:
        prefix: /dataSources/
    route:
    - destination:
        host: datasources.peekay.svc.cluster.local
